...
                                                <color key="tintColor" systemColor="labelColor"/>
                                                <state key="normal" backgroundImage="location.circle.fill" catalog="system"/>
                                                <connections>
                                                    <action selector="currentLocationButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HE6-zn-Mdr"/>
                                                </connections>
                                            </button>
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search" clearsOnBeginEditing="YES" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="2eh-wL-W34">
                                                <rect key="frame" x="50" y="0.0" width="274" height="40"/>
                                                <color key="backgroundColor" systemColor="systemFillColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                <textInputTraits key="textInputTraits" returnKeyType="go"/>
                                            </textField>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Cr-pd-dUW">
                                                <rect key="frame" x="334" y="0.5" width="40" height="38.5"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="fiO-2W-UTJ"/>
                                                    <constraint firstAttribute="width" constant="40" id="fn6-Kr-iSP"/>
                                                </constraints>
                                                <color key="tintColor" systemColor="labelColor"/>
                                                <state key="normal" backgroundImage="magnifyingglass" catalog="system"/>
                                                <connections>
                                                    <action selector="searchButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iQJ-PN-4wM"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
...
